refactor: melhora tratamento de erros na aplicação
